CartService and first tests